opam-version: "1.2"

maintainer: "steenuil.owl@gmail.com"
authors: [ "steenuil" ]
homepage: "https://github.com/steinuil/xobl"
bug-reports: "https://github.com/steinuil/xobl/issues"
dev-repo: "https://github.com/steinuil/xobl.git"
license: "MIT"

build: [[ "jbuilder" "build" "-p" name "-j" jobs ]]
install: [[ "jbuilder" "install" "-p" name ]]
remove:  [[ "jbuilder" "uninstall" "-p" name ]]

depends: [
  "jbuilder" {build}
  "xml-light"
]
